--- a/UBER_ride_analysis.ipynb
+++ b/UBER_ride_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJlREJ/cOArwgUj/a90uDf",
+      "authorship_tag": "ABX9TyMyNBu0vjW01YXOibqAz4V8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load the Excel file and parse the correct sheet\n",
+        "# Load the file\n",
         "path = 'https://gitlab.crio.do/me_notebook/me_jupyter_uberanalysis/-/raw/master/Uber_ride_analysis_dataset.csv'\n",
         "df = pd.read_csv(path,header=0)\n",
         "df.head()"
