--- a/UBER_ride_analysis.ipynb
+++ b/UBER_ride_analysis.ipynb
@@ -472,7 +472,7 @@
       "cell_type": "code",
       "source": [
         "# Filled missing payment method with mode\n",
-        "df['payment_method'].fillna(df['payment_method'].mode()[0], inplace=True)"
+        "df['payment_method'].fillna(df['payment_method'].mode()[0])"
       ],
       "metadata": {
         "colab": {
@@ -493,7 +493,7 @@
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
-            "  df['payment_method'].fillna(df['payment_method'].mode()[0], inplace=True)\n"
+            "  df['payment_method'].fillna(df['payment_method'].mode()[0])\n"
           ]
         }
       ]
